# mtg_scanner

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  example.py  generate_and_apply_migration.sh  pyproject.toml  start_dev_server.sh  tox.ini
.github/workflows/: tox.yml
alembic/: env.py
alembic/versions/: 0_empty.py  2a95c6b76b8c_base.py
scryfall_data/: pull_scryfall_data.py
src/: main.py
src/mtg_scanner/db/: __init__.py  models.py  sync_scryfall_data.py
src/mtg_scanner/env/: __init__.py
src/mtg_scanner/scanner/image_processing/: card_detection.py
src/mtg_scanner/scryfall_data/: bulk_data.py  model.py  pull_scryfall_data.py
src/mtg_scanner/web_server/: __init__.py  main.py
src/mtg_scanner/web_server/static/: styles.css
src/mtg_scanner/web_server/static/templates/: base.tmpl.html  card_list.html  card_list.tmpl.html  home.tmpl.html
src/web_server/: __init__.py
src/web_server/static/templates/: item.html
tests/: conftest.py  test_placeholder.py
tests/test_image_processing/: test_card_detection.py
